feat: get_activity_comments returns the whole thread, replies under their parent - EXO-90030
The tool asked Social for the top-level comments only (the
CommentsRealtimeListAccess default is loadSubComments = false), so every
reply in a thread was invisible to the assistant: Summarize-Post,
Explain-Comment and Draft-Reply-to-Comment reasoned over a partial thread.

The tool now loads the sub-comments. No new parameter: every shipped
binding calling it wants the discussion, the stream UI itself never reads
a thread without its replies, and the read model already carries
parent_comment_id, while Social places each reply right after its parent,
so a flat list keeps the structure visible. offset/limit keep paging the
top-level comments, each page carrying the replies of its comments; the
tool description says so, so the model can lower limit on a long thread.

TOOLS_KEY bumped to v16: a saved definition shadows the shipped JSON on
name match, and the new description is what tells the model that replies
are included and what limit counts.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01KBNDMeUwyK3XCTg8YP6PG9